# rhbm_gem

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  NOTICE  README.md  THIRD_PARTY_NOTICES.md  database_test.sqlite-journal
bindings/: BindingHelpers.hpp  BuiltInBindingUnits.generated.cmake  CMakeLists.txt  CommandApiBindings.cpp  CommandBindingUnits.generated.cmake  CommonBindings.cpp  CoreBindings.cpp  HRLModelTestBindings.cpp  MapSimulationBindings.cpp  MapVisualizationBindings.cpp  PositionEstimationBindings.cpp  PotentialAnalysisBindings.cpp  PotentialDisplayBindings.cpp  ResultDumpBindings.cpp
bindings/internal/: CommandBindingNames.generated.inc
src/: BuiltInCommandSources.generated.cmake  CMakeLists.txt  CommandSources.generated.cmake  main.cpp  rhbm_gem_sources.cmake
src/core/: Application.cpp  AtomPainter.cpp  BondAnalysisCommand.cpp  BuiltInCommandBindingInternal.hpp  BuiltInCommandCatalog.cpp  BuiltInCommandCatalogInternal.hpp  BuiltInCommandList.def  CMakeLists.txt  ChargeAnalysisCommand.cpp  ChargeAnalysisVisitor.cpp  CommandBase.cpp  CommandDataAccessInternal.hpp  CommandDataLoaderInternal.hpp  CommandRegistry.cpp  ComparisonPainter.cpp  DataObjectManager.cpp  DataObjectWorkflowOps.hpp  DataObjectWorkflowVisitors.cpp  DataObjectWorkflowVisitors.hpp  DemoPainter.cpp  EstimatorTester.cpp  FileIOManager.cpp  GausPainter.cpp  GaussianEstimator.cpp  HRLModelTestCommand.cpp  MapInterpolationVisitor.cpp  MapSampler.cpp  MapSampling.cpp  MapSimulationCommand.cpp  MapSimulationVisitor.cpp  MapVisualizationCommand.cpp  ModelPainter.cpp  PainterIngestionInternal.hpp  PositionEstimationCommand.cpp  PotentialAnalysisBondWorkflow.cpp  PotentialAnalysisBondWorkflow.hpp  PotentialAnalysisCommand.cpp  PotentialAnalysisCommandWorkflow.cpp  PotentialAnalysisExecutionOptions.hpp  PotentialAnalysisVisitor.cpp  (+14 more)
src/data/: AtomClassifier.cpp  AtomObject.cpp  AtomicChargeEntry.cpp  AtomicModelDataBlock.cpp  AtomicPotentialEntry.cpp  BondClassifier.cpp  BondObject.cpp  CCP4Format.cpp  CMakeLists.txt  ChargeEntryIterator.cpp  ChemicalComponentEntry.cpp  CifFormat.cpp  DataObjectDAOFactoryRegistry.cpp  DataObjectDispatch.cpp  DatabaseManager.cpp  DatabaseSchemaManager.cpp  FileFormatBackendFactory.cpp  FileFormatRegistry.cpp  FileProcessFactoryRegistry.cpp  FileProcessFactoryResolver.cpp  GroupChargeEntry.cpp  GroupPotentialEntry.cpp  LegacyModelObjectDAO.cpp  LocalPotentialEntry.cpp  MapFileReader.cpp  MapFileWriter.cpp  MapObject.cpp  MapObjectDAO.cpp  MapObjectFactory.cpp  ModelFileReader.cpp  ModelFileWriter.cpp  ModelObject.cpp  ModelObjectDAO.cpp  ModelObjectDAOv2.cpp  ModelObjectFactory.cpp  MrcFormat.cpp  PdbFormat.cpp  PotentialEntryIterator.cpp  SQLiteWrapper.cpp
src/gui/: CMakeLists.txt  GuiCommandExecutor.cpp  MainWindow.cpp  MainWindow.hpp  main.cpp
src/python/: CMakeLists.txt  CommandApiBindings.cpp  CommandSystemBindings.cpp  CommonBindings.cpp  CoreBindings.cpp
src/utils/: AminoAcidInfoHelper.cpp  AtomClassifier.cpp  AtomKeySystem.cpp  AtomSelector.cpp  AtomicInfoHelper.cpp  BondKeySystem.cpp  CMakeLists.txt  ChemicalDataHelper.cpp  ComponentHelper.cpp  ComponentKeySystem.cpp  CylinderSampler.cpp  ElectricPotential.cpp  FilePathHelper.cpp  GausLinearTransformHelper.cpp  GridSampler.cpp  HRLAlphaTrainer.cpp  HRLDataTransform.cpp  HRLGroupEstimator.cpp  HRLModelAlgorithms.cpp  HRLModelHelper.cpp  HRLModelTester.cpp  LocalPainter.cpp  Logger.cpp  ROOTHelper.cpp  SphereSampler.cpp
tests/: AminoAcidInfoHelper_test.cpp  Application_test.cpp  ArrayStats_test.cpp  AtomSelector_test.cpp  AtomicInfoHelper_test.cpp  BindingSurfaceParity_test.cpp  BuiltInCommandBindingName_test.cpp  BuiltInCommandCatalog_test.cpp  CMakeLists.txt  ChemicalDataHelper_test.cpp  ChimeraXHelper_test.cpp  CommandBase_test.cpp  CommandCatalogBindingNamesHelper.cpp  CommandCommonOptions_test.cpp  CommandDescriptorShape_test.cpp  CommandExecutionContract_test.cpp  CommandOptionHelper_test.cpp  CommandRegistrationPolicy_test.cpp  CommandRegistry_test.cpp  CommandScalarValidationHelper_test.cpp  CommandSurface_test.cpp  CommandTestHelpers.hpp  CommandValidationAssertions.hpp  CommandValidationIssue_test.cpp  ComponentHelper_test.cpp  ContributorGuidanceSync_test.cpp  DataObjectIOSchema_test.cpp  DataObjectManager_test.cpp  DataObjectVisitorArchitecture_test.cpp  DocsSync_test.cpp  EigenMatrixUtility_test.cpp  ElectricPotential_test.cpp  FilePathHelper_test.cpp  GausLinearTransformHelper_test.cpp  HRLGroupEstimator_test.cpp  HRLModelHelper_test.cpp  HRLModelTestCommand_test.cpp  KDTreeAlgorithm_test.cpp  KeyPacker_test.cpp  Logger_test.cpp  (+13 more)
tests/cmake/: BuiltInCoreCommandTests.generated.cmake  CoreCommandTests.generated.cmake  core_tests.cmake  data_tests.cmake  integration_tests.cmake  utils_tests.cmake
tests/core/: EstimatorTester_test.cpp  GaussianEstimator_test.cpp  MapSampler_test.cpp  TestDataFactory_test.cpp
tests/data/: CMakeLists.txt  DataObjectAssemblySpatialQuery_test.cpp  DataObjectDispatchAndIngestion_test.cpp  DataObjectFileIO_test.cpp  DataObjectImportRegression_test.cpp  DataObjectMapBehavior_test.cpp  DataObjectModelAnalysis_test.cpp  DataObjectPainterIngestion_test.cpp  DataObjectPersistence_test.cpp  DataObjectRuntimeBehavior_test.cpp  DataObjectRuntime_test.cpp  DataObjectSchemaBootstrap_test.cpp  DataObjectSchemaCompatibility_test.cpp  DataObjectSchemaLifecycle_test.cpp  DataObjectSchemaValidation_test.cpp  DataObjectSchema_test.cpp  DataPublicHeaders_test.cpp  DataPublicSurface_test.cpp  GaussianStatistics_test.cpp  GaussianValueObjectRegression_test.cpp  LocalPotentialSeries_test.cpp  RHBMTypes_test.cpp  SQLitePersistenceTypedApi_test.cpp  test_model_alt_b_only.cif  test_model_atom_id_double_quote.cif  test_model_auth_seq_alnum_struct_conn.cif  test_model_invalid_secondary_range.cif  test_model_loop_multiline.cif
tests/fixtures/: test_model.cif  test_model_auth_only.cif  test_model_database_order.cif  test_model_keyvalue_entity.cif  test_model_missing_model_num.cif  test_model_missing_numeric.cif  test_model_model2_only.cif  (+2 more)
(+865 files in other folders)
