set(BINDINGS_SOURCES
    CoreBindings.cpp
)

pybind11_add_module(cpp_module ${BINDINGS_SOURCES})


target_link_libraries(cpp_module PRIVATE core data utils CompilerFlags)

set_target_properties(cpp_module PROPERTIES
    ARCHIVE_OUTPUT_DIRECTORY "${PROJECT_BINARY_DIR}"
    RUNTIME_OUTPUT_DIRECTORY "${PROJECT_BINARY_DIR}"
    LIBRARY_OUTPUT_DIRECTORY "${PROJECT_BINARY_DIR}"
)

install(
    TARGETS cpp_module
    RUNTIME DESTINATION "${CMAKE_INSTALL_BINDIR}"
    LIBRARY DESTINATION "${CMAKE_INSTALL_LIBDIR}"
    ARCHIVE DESTINATION "${CMAKE_INSTALL_LIBDIR}"
)
