set(BINDINGS_SOURCES
    CoreBindings.cpp
)

set(BINDINGS_MODULE_TARGET rhbm_gem_module)
pybind11_add_module(${BINDINGS_MODULE_TARGET} ${BINDINGS_SOURCES})

if(RHBM_GEM_PYTHON_INSTALL_DIR)
    set(RHBM_GEM_PYTHON_MODULE_INSTALL_DIR "${RHBM_GEM_PYTHON_INSTALL_DIR}")
elseif(RHBM_GEM_PYTHON_INSTALL_LAYOUT STREQUAL "LIBDIR")
    set(RHBM_GEM_PYTHON_MODULE_INSTALL_DIR "${CMAKE_INSTALL_LIBDIR}")
else()
    set(RHBM_GEM_PYTHON_MODULE_INSTALL_DIR
        "${CMAKE_INSTALL_LIBDIR}/python${Python_VERSION_MAJOR}.${Python_VERSION_MINOR}/site-packages")
endif()

set(_RHBM_GEM_DEFAULT_PYTHON_INSTALL_RPATH "")
if(NOT IS_ABSOLUTE "${RHBM_GEM_PYTHON_MODULE_INSTALL_DIR}")
    set(_RHBM_GEM_FAKE_PREFIX "/__rhbmgem_prefix__")
    file(RELATIVE_PATH _RHBM_GEM_REL_PY_TO_LIBDIR
        "${_RHBM_GEM_FAKE_PREFIX}/${RHBM_GEM_PYTHON_MODULE_INSTALL_DIR}"
        "${_RHBM_GEM_FAKE_PREFIX}/${CMAKE_INSTALL_LIBDIR}")
    unset(_RHBM_GEM_FAKE_PREFIX)
    if(_RHBM_GEM_REL_PY_TO_LIBDIR STREQUAL ".")
        if(APPLE)
            set(_RHBM_GEM_DEFAULT_PYTHON_INSTALL_RPATH "@loader_path")
        elseif(UNIX)
            set(_RHBM_GEM_DEFAULT_PYTHON_INSTALL_RPATH "$ORIGIN")
        endif()
    else()
        if(APPLE)
            set(_RHBM_GEM_DEFAULT_PYTHON_INSTALL_RPATH "@loader_path/${_RHBM_GEM_REL_PY_TO_LIBDIR}")
        elseif(UNIX)
            set(_RHBM_GEM_DEFAULT_PYTHON_INSTALL_RPATH "$ORIGIN/${_RHBM_GEM_REL_PY_TO_LIBDIR}")
        endif()
    endif()
endif()

target_link_libraries(${BINDINGS_MODULE_TARGET} PRIVATE core data utils CompilerFlags)
target_include_directories(${BINDINGS_MODULE_TARGET} PRIVATE "${PROJECT_SOURCE_DIR}/src/core")

set_target_properties(${BINDINGS_MODULE_TARGET} PROPERTIES
    ARCHIVE_OUTPUT_DIRECTORY "${PROJECT_BINARY_DIR}"
    RUNTIME_OUTPUT_DIRECTORY "${PROJECT_BINARY_DIR}"
    LIBRARY_OUTPUT_DIRECTORY "${PROJECT_BINARY_DIR}"
)
if(_RHBM_GEM_DEFAULT_PYTHON_INSTALL_RPATH)
    set_target_properties(${BINDINGS_MODULE_TARGET} PROPERTIES
        INSTALL_RPATH "${_RHBM_GEM_DEFAULT_PYTHON_INSTALL_RPATH}"
    )
endif()

install(
    TARGETS ${BINDINGS_MODULE_TARGET}
    RUNTIME DESTINATION "${RHBM_GEM_PYTHON_MODULE_INSTALL_DIR}"
    LIBRARY DESTINATION "${RHBM_GEM_PYTHON_MODULE_INSTALL_DIR}"
    ARCHIVE DESTINATION "${RHBM_GEM_PYTHON_MODULE_INSTALL_DIR}"
)
